css/index.css
/* profile photo */
#profile {
  display: block;
  margin-left: 45%;
  margin-right: auto;
  margin-top: 10%;
  width: 10%;
  border-radius: 50%;
  border: 3px solid white;
}
/* div encompassing name and links */
#content {
  position: relative;
  top: 30%;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  justify-self: center;
}

/* name */
h1 {
  color: white;
  text-align: center;
}

/* links */
p {
  color: white;
  text-align: center;
}

body {
  background-color: rgba(0, 0, 0, 0.89);
}

#otherPages {
  float: left;
  margin-left: 5%;
  font-size: 20px;
}

